refactor(mongodb): 重构MongoDB测试配置以支持完整查询功能
- 实现了完整的MongoTemplate模拟功能，支持findOne、findAll、count等操作
- 添加了基于Criteria的条件查询过滤逻辑
- 集成了MongoConverter、MongoMappingContext等核心组件
- 新增MockMongoConfiguration重置方法以便测试隔离
- 移除过时的简单查询实现并优化数据过滤算法
- 更新测试类以使用新的配置重置机制